$Id$

2013-03-01  Douglas Gilbert  <dgilbert@interlog.com>

	scsicmds.h, scsicmds.cpp, scsiprint.cpp:
	- for SCSI disks prefer READ DEFECT(12) for finding the
	  grown defect list length (previously used READ DEFECT(10)
	  only)

2013-03-01  Christian Franke  <franke@computer.org>

	drivedb.h:
	- SandForce Driven SSDs: Transcend SSD320
	- Intel 520 Series SSDs: OEM variant
	- JMicron based SSDs: Transcend SSD25 IDE
	- HGST Travelstar 7K1000
	- Seagate Desktop HDD.15
	- Seagate LD25.2
	- Western Digital RE4 (SATA 6Gb/s)
	- USB: Fujitsu/Zalman ZM-VE300 (0x04c5:0x2028)

2013-02-23  Christian Franke  <franke@computer.org>

	drivedb.h: Crucial/Micron RealSSD C300: Remove bogus trailing '|' from
	regex (Regression from r3772).

2013-02-16  Douglas Gilbert  <dgilbert@interlog.com>

	scsicmds.h, scsicmds.cpp, scsiprint.h, scsiprint.cpp:
	- for SCSI disks, in 'smartctl --info' report physical
	  block size and lowest LBA alignement (if PB size
	  different from LB size); logical block provisioning
	  status (if any); and disk protection (a.k.a. DIF) type

2013-02-19  Alex Samorukov  <samm@os2.kiev.ua>

	atacmds.cpp: fixed scttemphist on LE machines, including PPC. Patch
	and report provided by Roger Roehrig.

2013-02-16  Douglas Gilbert  <dgilbert@interlog.com>

	scsicmds.h, scsicmds.cpp, scsiprint.h, scsiprint.cpp:
	- SCSI VPD work; improve rotation rate reporting and add form factor

2013-02-14  Christian Franke  <franke@computer.org>

	drivedb.h:
	- SandForce Driven SSDs: Kingston V+ 200, Mushkin Chronos deluxe,
	  OCZ Talos 2
	- Plextor M3 (Pro) Series SSDs

2013-02-13  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron RealSSD C300: new separate entry
	- Crucial/Micron RealSSD m4/C400: firmware bug warning

2013-02-10  Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: adding device type fix for devices on MPT controllers.

2013-02-06  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Seagate Samsung SpinPoint M8U (USB)